# flight-booking-system

./: .gitignore  CMakeLists.txt  README.md  config.txt  project_report.docx  ~$oject_report.docx
include/: airplane.h  fileReader.h  inputReader.h  seat.h  system.cpp  system.h  ticket.h  user.h
src/: airplane.cpp  fileReader.cpp  inputReader.cpp  main.cpp  seat.cpp  system.cpp  ticket.cpp  user.cpp
